# feedgen

./: .dev.sqlite3  .dockerignore  .env.sample  .gitignore  .gitmodules  .rsync-filter  .travis.yml  Dockerfile  GNUmakefile  LICENSE  Procfile  README.md  ansible.cfg  app.wsgi  appspec.yml  docker-compose.yml  entrypoint.dev.sh  entrypoint.sh  entrypoint.test.sh  feedgen.yml  feedgen_hasname.py  manage.py  pyproject.toml  requirements.txt  run.py  uwsgi.ini
.circleci/: config.yml
ansible/: ansible.cfg  feedgen-fastcgi.service  feedgen-hasname.yml  feedgen.yml  hosts
cron/: genproxy.py
docs/: README.md  feedgen-fastcgi.service
feedgen_hasname/: __init__.py  asgi.py  settings.py  settings_dev.py  settings_test.py  urls.py  wsgi.py
general/: urls.py
general/services/: __init__.py  proxy_service.py  proxy_socks5_service.py  requests_service.py
general/tests/: html_bookwalker_lightnovel.txt  html_bookwalker_manga.txt  html_cakeresume.txt  html_dcard_board.txt  html_dcard_main.txt  html_job104.txt  html_job1111.txt  html_job518.txt  html_rent591.txt  html_youtube.txt  json_dcard_popular.txt  json_job104.txt  json_meetjobs.txt  json_momoshop.txt  json_pchome.txt  json_pchome_lightnovel.txt  json_plurk_search.txt  json_plurk_top_zh.txt  json_shopee.txt  json_shopee_item.txt  json_shopee_shop.txt  json_yourator.txt  test_index.py  test_robotstxt.py  test_smoke.py
general/views/: bookwalker.py  cakeresume.py  dcard.py  index.py  job104.py  job1111.py  job518.py  meetjobs.py  momoshop.py  pchome.py  plurk.py  rent591.py  robotstxt.py  shopee.py  taipeimetrotimetable.py  yourator.py  youtube.py
scripts/: after-install.sh
tests/: smoke_test.py
