[project]
name = "feedgen_hasname"
version = "0.2024.0311.0"
description = "feedgen.hasname.com"
authors = [{ name = "Gea-Suan Lin", email = "gslin@gslin.com" }]
requires-python = "~=3.13.0"
readme = "README.md"
license = "MIT"
keywords = ["feed"]
dependencies = [
    "base36",
    "cssselect",
    "django",
    "django-service-objects",
    "feedgen",
    "lxml",
    "lxml_html_clean",
    "pip",
    "pysocks",
    "python-dateutil",
    "python-dotenv",
    "requests",
    "requests_futures",
    "sentry-sdk",
    "uwsgi",
]

[project.urls]
Homepage = "https://github.com/hasname/feedgen"
Repository = "https://github.com/hasname/feedgen.git"

[dependency-groups]
dev = [
    "coverage",
    "requests-mock",
    "ruff",
]
